--- a/sliding_puzzle/README
+++ b/sliding_puzzle/README
@@ -10,6 +10,9 @@ The initial board states are to be written in boardstates.in in the following fo
 .
 
 To compile and run the program run 'sh run.sh'
+
+Limitations:
+Taking much time to run : To modify
 ___________________________________________________________________________
 Sliding Puzzle problem:
 Given initial state of the board, find move sequences to get sorted position
